--- a/src/components/button.css
+++ b/src/components/button.css
@@ -7,6 +7,10 @@
   background: linear-gradient(to bottom,  #f2f6f8 0%, #d8e1e7 50%, #b5c6d0 51%, #e0eff9 100%);
 }
 
+.hover {
+  background: linear-gradient(to bottom, #efc5ca 0%, #d24b5a 50%, #ba2737 51%, #f18e99 100%);
+}
+
 .redButton:active {
   background: linear-gradient(to bottom, #efc5ca 0%, #d24b5a 50%, #ba2737 51%, #f18e99 100%);
 }
